src/main/java/org/example/breakoutdrop/Errors/ClientHTTP/BadRequest400.java
package org.example.breakoutdrop.Errors.ClientHTTP;

public class BadRequest400 extends RuntimeException {
    public BadRequest400(String message) {
        super(message);
    }
}
